correction alignement du premier element<input> dans les lables

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,7 +47,7 @@ body {
     
     display: flex;
     height: 100%;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;      
     
 }
